# reversi-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 47ea5e3b316c_create_games_table.py
examples/: README.md  docker-compose.dev.yml  docker-compose.yml
reversi_backend/: __init__.py  ai_config.py  ai_manager.py  app.py  config.py  database.py  game_manager.py  models.py  routes.py
reversi_backend/ai_players/: __init__.py  piece_player.py
tests/: conftest.py  test_ai_integration.py  test_database_integration.py  test_garbage_collection.py  test_integration.py
