[project]
name = "reversi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.121.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "rust-reversi>=1.4.4",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # pycodestyle, pyflakes, isort, bugbear
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reversi_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
